# XNOR-Convolution-Operator

./: README.md  xnet_common.h  xnet_function.h
test/: CMakeLists.txt  test_binarization.cpp  test_simulate.cpp  test_xnorconv.cpp
